--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,9 @@
-@(message: String)
+@(message: String, users:List[User])
 
 @main("Welcome to Play") {
 
-    @play20.welcome(message)
-
+    @message
+    @users.map{ user =>
+        @user.name
+    }
 }
