Login Page added.

--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -1,4 +1,4 @@
-@()
+@(pageTitle: String)
 <header>
     <nav class='navbar navbar-default grove-navbar' role='navigation'>
          <div class='container'>
@@ -25,4 +25,9 @@
          </div>
       </div>
      </nav>
+        <div class="widewrapper pagetitle">
+            <div class="container">
+                <h1>@pageTitle</h1>
+            </div>
+        </div>
  </header>
