This is the original Grove template that was purchased. Reference if needed.

--- a/app/views/aboutus.scala.html
+++ b/app/views/aboutus.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main("Welcome to Play") {
+@main("Welcome to Play", pageTitle = "About Us") {
 
     KDSAHBCKSAB,SJBC
     SADMJCBVSAJHBCKSAN
