fixing log image size. fixing bugs in downloading assets

--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -4,7 +4,7 @@
          <div class='container'>
              <div class='navbar-header'>
                  <a href='#' class='grove-toggle' data-toggle='collapse' data-target='.grove-nav'>   <i class='glyphicons show_lines'></i>  </a>
-                 <a href='index.html' class='navbar-brand'><img src='img/cetLogo.png' alt='CET'></a>
+                 <a href='index.html' class='navbar-brand'><img src='@routes.Assets.at("images/cetLogo.png")' alt='CET'></a>
                  </div>
                  <div class='collapse navbar-collapse grove-nav'>
                  <ul class='nav navbar-nav'>
