--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,7 +32,7 @@
 	    <![endif]-->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery/jquery-1.9.1.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="@routes.Assets.at("javascript/vendor/jquery/jquery-1.9.1.min.js")><\/script>')</script>
 
         <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
         <script src="@routes.Assets.at("stylesheets/map.js")" type="text/javascript"></script>
@@ -40,7 +40,12 @@
     </head>
     <body>
         @header(pageTitle)
+
         @content
 
+        @footer()
+
+        <script src="@routes.Assets.at("javascript/vendor/bootstrap/bootstrap.min.js")"></script>
+        <script src="@routes.Assets.at("javascript/vendor/modernizr/modernizr.js")"></script>
     </body>
 </html>
