--- a/app/views/TravelBudgetRequest/budgetOrder.scala.html
+++ b/app/views/TravelBudgetRequest/budgetOrder.scala.html
@@ -5,31 +5,51 @@
 	    <div class="container content">
 	        <div class="row">
 
-				<section id="contact-form" class="col-md-8">
-					<h2> Contact Us </h2>
+				<section id="contact-form" class="col-md-8 faq">
+					<h2> Schedule Your Trip </h2>
 					<form action="#" method="get" accept-charset="utf-8" class="clearfix">
-						<div class="row">
-							<div class="col-sm-6 form-group">
-								<label for="name"> Name </label>
-								<input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
-							</div>
 
-							<div class="col-sm-6 form-group">
-								<label for="email"> Email Address </label>
-								<input class="form-control input-lg" type="email" id="email" name="email" value="" placeholder="">
-							</div>
-						</div>
 
-	                    <div class="row">
-							<div class="col-sm-12 form-group">
-								<label for="message"> Message </label>
-								<textarea class="form-control" id="message" name="message" rows="15"></textarea>
-							</div>
-						</div>
+                        <div class="question">
+                            <a href="#answer1" class="faq-toggle" data-toggle="collapse">Trip #<span class="trip-id">1</span></a>
+
+                            <div id="answer1" class="collapse">
+                                <div class="answer">
+                                    <div class="row">
+                                        <div class="col-sm-6 form-group">
+                                            <label for="name"> Departure Date </label>
+                                            <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                                        </div>
+
+
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-sm-6 form-group">
+                                            <label for="name"> Location </label>
+                                            <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                                        </div>
+                                    </div>
+
+
+                                    <div class="row">
+                                        <div class="col-sm-12 form-group">
+                                            <label for="message"> Time </label>
+                                            <textarea class="form-control" id="message" name="message" rows="15"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
 
 						<button type="submit" class="btn btn-grove-one btn-xlg btn-bold"> Send Message </button>
 					</form>
 				</section>
+
+
 
 	          @views.html.RightSidebar.contactInfo()
 
