--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,10 +10,10 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <!--script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script-->
 
         <!-- Bootstrap styles -->
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/vendor/bootstrap/bootstrap.css")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/tagsinput/bootstrap-tagsinput.css")">
 
         <!-- Glyphicons -->
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/vendor/glyphicons/glyphicons.css")">
@@ -31,11 +31,15 @@
 	        <script src="@routes.Assets.at("javascript/vendor/google/html5-3.6-respond-1.1.0.min.js")"></script>
 	    <![endif]-->
 
+        <!-- Libs -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="@routes.Assets.at("javascript/vendor/jquery/jquery-1.9.1.min.js")><\/script>')</script>
-
         <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
         <script src="@routes.Assets.at("stylesheets/map.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascript/vendor/typeahead.bundle.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascript/tagsinput/bootstrap-tagsinput.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascript/angra.js")" type="text/javascript"></script>
+
 
     </head>
     <body>
