--- a/app/views/PlanTravel/travelPlanner.scala.html
+++ b/app/views/PlanTravel/travelPlanner.scala.html
@@ -85,6 +85,32 @@
                                         </div>
                                     </div>
 
+                                    <div class="row">
+                                        <label class="col-sm-12" for="name"> Hotel </label>
+
+                                        <div class="col-sm-4 form-group">
+                                            <label class=" checkbox">
+                                                <input class="book-hotel" type="checkbox" name="hotel" data-display-trip-form="" value="">
+                                                   Book a hotel?
+                                            </label>
+                                        </div>
+
+                                        <div class="col-sm-8 form-group">
+                                            <label for="name"> Preferences </label>
+
+                                            <label for="name"> Checkout Date </label>
+                                            <input class="form-control input-lg" type="text" name="name" value="" placeholder="">
+
+                                            <label class="checkbox">
+                                                <input class="" type="checkbox" name="hotel-meal" value="">
+                                                    Must serve meal
+                                            </label>
+                                        </div>
+
+
+
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
