changing preferred rental company behavior

--- a/app/views/PlanTravel/travelPlanner.scala.html
+++ b/app/views/PlanTravel/travelPlanner.scala.html
@@ -53,8 +53,10 @@
 
 
                                     <div class="row">
+
+                                        <label class="col-sm-12" for="name"> Additional Transportation </label>
+
                                         <div class="col-sm-4 form-group">
-                                            <label for="name"> Additional Transportation </label>
 
                                             <label class="radio">
                                                 <input class="additional-transportation rental" type="radio" value="rental" name="additional_transportation">
