fixing company to companies

--- a/app/views/PlanTravel/travelPlanner.scala.html
+++ b/app/views/PlanTravel/travelPlanner.scala.html
@@ -81,7 +81,7 @@
                                         </div>
 
                                         <div class="col-sm-8 form-group preferred-rental-company temp-hide">
-                                            <label for="name"> Preferred Rental Company</label>
+                                            <label for="name"> Preferred Rental Companies</label>
                                             <!-- TODO grab data from the database -->
                                             <select class="form-control input-lg" type="text" name="name" data-content='@routes.Assets.at("json/companies.json")' multiple data-role="tagsinput"></select>
                                         </div>
