adding trips and binding taginput

--- a/app/views/PlanTravel/travelPlanner.scala.html
+++ b/app/views/PlanTravel/travelPlanner.scala.html
@@ -28,13 +28,13 @@
 
                         <div class="row">
                             <div class="col-sm-12 form-group">
-                                <label for="message"> Comments </label>
+                                <label for="message"> Notes </label>
                                 <textarea class="form-control " id="message" name="message" rows="5"></textarea>
                             </div>
                         </div>
 
 
-						<button type="submit" class="btn btn-grove-one btn-xlg btn-bold pull-right"> Send Message </button>
+						<button type="submit" class="btn btn-grove-one btn-xlg btn-bold pull-right"> Send Application </button>
 
                     </form>
 				</section>
