--- a/app/views/PlanTravel/trip.scala.html
+++ b/app/views/PlanTravel/trip.scala.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-sm-12 form-group">
                     <label for="name"> Departure Location </label>
-                    <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+                    <input class="form-control input-lg departure-location" type="text" id="name" name="name" value="" placeholder="">
                 </div>
             </div>
 
