--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -20,6 +20,9 @@
                      <li><a href='login.html'>Login/Signup</a></li>
                      <li><a href='contact.html'>Contact</a></li>
                  </ul>
+                 <li class='inactive'>
+                 <a href="@routes.Application.login">Login</a>
+                 </li>
              </li>
              </ul>
          </div>
