Logout implemented in a button.

--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -21,7 +21,7 @@
                      <li><a href='contact.html'>Contact</a></li>
                  </ul>
                  <li class='inactive'>
-                 <a href="@routes.Application.login">Login</a>
+                 <a href="@routes.Application.logout()">Logout</a>
                  </li>
              </li>
              </ul>
