Logout implemented. Working on validation of account creation.

--- a/app/views/Dashboard/dashboard.scala.html
+++ b/app/views/Dashboard/dashboard.scala.html
@@ -1,5 +1,5 @@
 @()
-@main(pageTitle = "Dashboard") {
+@main(pageTitle = "Dashboard")(logout = "Logout") {
 
     <div class="widewrapper dashboard">
         <div class="container content">
