--- a/app/views/PlanTravel/travelPlanner.scala.html
+++ b/app/views/PlanTravel/travelPlanner.scala.html
@@ -1,5 +1,5 @@
 @()
-@main(pageTitle = "Travel Planner") {
+@main(pageTitle = "Travel Planner")(logout = "Logout") {
 
     <div class="widewrapper">
 	    <div class="container content">
