--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -59,11 +59,15 @@
             Please fill out the text fields below.
         </p>
 
-
+        @helper.form(routes.Application.register) {
 
         <form action="#"  method="get" >
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
+
+
+
+
 
                     <div>
                         <label for="name">Name</label>
@@ -98,7 +102,7 @@
         </form>
     </div>
 
-
+}
 
 
     </div>
