--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@(loginForm: Option[Form[(String,String)]] = None)(userForm: Option[Form[models.User]] = None)(implicit flash: Flash)
+@(loginForm: Option[Form[(String,String)]] = None)(userForm: Option[Form[models.User]] = None)(implicit flash: Flash = Flash() )
 
 @import views.html.helper._
 
@@ -19,15 +19,17 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
 
-                    @loginForm.globalError.map { error =>
-                    <p class="error">
-                        @error.message
-                    </p>
+                    @loginForm.map{ loginF =>
+                        @loginF.globalError.map { error =>
+                            <p class="error">
+                                @error.message
+                            </p>
+                        }
                     }
 
-                    @@flash.get("success").map { message =>
+                    @flash.get("success").map { message =>
                     <p class="success">
-                        @message
+                        message
                     </p>
                     }
 
@@ -67,15 +69,18 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
 
-                    @userForm.globalError.map { error =>
-                    <p class="error">
-                        @error.message
-                    </p>
+                    @userForm.map{ registerF =>
+                        @registerF.globalError.map { error =>
+                            <p class="error">
+                                kashbkajsdbhjashb
+                                _.message
+                            </p>
+                        }
                     }
 
                     @flash.get("success").map { message =>
                     <p class="success">
-                        @message
+                        message
                     </p>
                     }
 
