Error message needs to be displayed.

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -72,8 +72,7 @@
                     @userForm.map{ registerF =>
                         @registerF.globalError.map { error =>
                             <p class="error">
-                                kashbkajsdbhjashb
-                                _.message
+                                @error.message
                             </p>
                         }
                     }
